--- a/styles/background.css
+++ b/styles/background.css
@@ -7,4 +7,35 @@ body {
 
 div {
     height: 10vh;
+    background-color: red;
 }
+
+
+
+@media (min-width: 577px) {
+    div {
+        height: 12vh;
+        background-color: green;
+    }
+}
+
+@media (min-width: 961px) {
+    div {
+        height: 14vh;
+        background-color: teal;
+    }
+}
+
+/* @media (max-width: 1024px) {
+    div {
+        height: 8vh;
+        background-color: green;
+    }
+}
+
+@media (max-width: 576px) {
+    div {
+        height: 6vh;
+        background-color: orange;
+    }
+} */
